<?xml version="1.0"?>
<package>
  <name>rocon_rosjava_core</name>
  <version>0.2.0</version>
  <description>
    Rocon related libraries in rosjava.
  </description>

  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/rocon_rosjava_utils</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_rosjava_utils</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_rosjava_utils/issues</url>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rocon_std_msgs</build_depend>
  <build_depend>rocon_interaction_msgs</build_depend>
  <!-- Remove once genjava is official -->
  <build_depend>rosjava_messages</build_depend>
</package>
